--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: singularity01
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --timeout 120
     envVars:
       - key: GOOGLE_CREDENTIALS
         sync: false
